--- a/home/templates/login.html
+++ b/home/templates/login.html
@@ -26,7 +26,7 @@
           class="form-control" placeholder="아이디" required>
         <label class = "login-form-label">아ds이디</label>
         <div class="invalid-feedback">
-          아이디를 작성해주세요 ! dsadsa 
+          아이디를 작성해주세요 !
         </div>
       </div>
       <br>
