Setting Django project

--- a/home/templates/login.html
+++ b/home/templates/login.html
@@ -24,7 +24,7 @@
       <div class="form-floating mb-3" style="display: inline-block; z-index: 1;">
         <input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="255"
           class="form-control" placeholder="아이디" required>
-        <label class = "login-form-label">아ds이디</label>
+        <label class = "login-form-label">아이디</label>
         <div class="invalid-feedback">
           아이디를 작성해주세요 !
         </div>
