--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" style="text-align: right; font-weight: bold;" id="navbarsExample07">
                 <ul class="nav col-lg-auto justify-content-center">
                     <li><a href="{% url 'introduce_main' %}" style="color:#fd945b" class="nav-link px-2.5">모연하다 소개</a></li>
-                    <li><a href="" style="color:#fd945b" class="nav-link px-2.5">모연 선생님</a></li>
+                    <li><a href="{% url 't_main' %}" style="color:#fd945b" class="nav-link px-2.5">모연 선생님</a></li>
                     <li><a href="" style="color:#fd945b" class="nav-link px-2.5">모연 배우미</a></li>
                     <li><a href="" style="color:#fd945b" class="nav-link px-2.5">체험활동</a></li>
                     
