--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -20,10 +20,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <style>
         body {
-            margin-top: 7vh;
+            margin-top: 7.5vh;
         }
 
         @media (max-width:900px) {
+            body {
+                margin-top: 5vh;
+            }
+        }
+
+        @media (max-width:700px) {
             body {
                 margin-top: 6vh;
             }
