--- a/introduce/templates/introduce_main.html
+++ b/introduce/templates/introduce_main.html
@@ -15,14 +15,22 @@
 </head>
 
 <div class = "introduce mx-auto">
-  <div class = "introduce-side bg-light">
-    <nav class = "navbar">
-      사이드 네브바가 들어갈 공간입니다
+  <div class = "introduce-side">
+    <nav class = "introduce-nav">
+      <a href="{% url 'main' %}" class = "nav-link"> 메인 </a> <hr>
+      <a href="{% url 'main' %}" class = "nav-link"> 메인2 </a> <hr>
+      <a href="{% url 'main' %}" class = "nav-link"> 메인3 </a> <hr>
+      <a href="{% url 'introduce_developer' %}" class = "nav-link"> 개발자소개 </a>
     </nav>
   </div>
   
-  <div class = "introduce-content">
-    아아ㅏㅏㅏ아아 콘텐츠입니다
+  <div class = "introduce-content flex-column">
+    <p class = "introduce-title"> {% block introduce-title %} {% endblock %} </p>
+    <hr>
+    <div class = "introduce-body">
+      {% block introduce-body %}
+      {% endblock %}
+    </div>
   </div>
 </div>
 {% endblock %}
