Revert "Modify homeApp & Create introduce Developers"

--- a/introduce/static/css/introduce_main.css
+++ b/introduce/static/css/introduce_main.css
@@ -1,114 +1,20 @@
 .introduce {
-    width: 68%;
     display: flex;
-    align-items: start;
+    width: 67%
 }
-
 .introduce-side {
-    width: 20%;
-    margin-right: 3%;
-    margin-top: 7%;
+    width: 30%;
 }
 
 .introduce-content {
-    width: 80%;
-    text-align:left;
-    margin-top: 6%;
-    margin-bottom: 8%;
+    background-color: beige;
+    width: 70%;
 }
 
-.introduce-title {
-    width: 100%;
-    text-align: left;
-    color:#f6894e;
-    padding-left: 10px;
-    font-weight: 600;
-    font-size: 1.8vw;
-}
-
-.introduce-body {
-    width: 100%;
-    padding-left: 10px;
-}
-
-a.nav-link  {
-    width: 100%;
-    color: black;
-}
-
-a.nav-link:hover {
-    color: #fd945b;
-}
-
-/* 반응형 패드 */
-@media (max-width:900px) {
+/* 반응형 */ 
+@media (max-width: 700px){
     .introduce {
         display: flex;
-        width: 90%;
-    }
-
-    .introduce-title {
-        font-weight: 600;
-        font-size: 3.5vw;
-    }
-
-    .introduce-body {
-        font-size: 2.5vw;
-    }
-
-    a.nav-link  {
         width: 100%;
-        color: black;
-        font-size: 3vw;
     }
-    
-    a.nav-link:hover {
-        color: #fd945b;
-        font-size: 3vw;
-    }
-} 
-
-@media (max-width: 400px) {
-    .introduce {
-        display: flex;
-        width: 95%;
-    }
-
-    .introduce-title {
-        font-weight: 600;
-        font-size: 3.5vw;
-    }
-
-    .introduce-body {
-        font-size: 2.5vw;
-    }
-}
-
-
-/* introuduce_developer */
-.developer {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-}
-
-.developer > div {
-    width: 50%;
-}
-
-.developer-box {
-    width: 100%;
-}
-
-.developer-box > img {
-    width: 20%;
-}
-
-.developer-box > img.developer-img {
-    width: 50%;
-}
-
-.developer-img {
-    border-radius: 50%;
-    background-color: rgba(204, 204, 204, 0.311);
 }
