--- a/mypage/templates/list.html
+++ b/mypage/templates/list.html
@@ -14,10 +14,15 @@
     }
   </style>
 </head>
-
-
+<div class="mypage_navbar">
+  <div class="mypage_navbar2">
+      <span style="margin: 10px;"><a class="corr" href="{% url 'mypage' %}">개인정보수정</a> </span><!--px를 다른 단위로 변경할 것임-->
+      <span style="margin: 10px;"><a class="booked" href="{% url 'bookmark' %}">찜목록</a> </span>
+      <span style="margin: 10px;"><a class="list-1" href="{% url 'list' %}">내가 쓴 글 모아보기</a> </span>
   </div>
-</div>
+  </div>
+  <hr>
+
 <script>
 
 </script>
