폴리퀘 1%더 수정

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -63,7 +63,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownUser1">
                             <li><a class="dropdown-item user-page" style="font-weight: bold;"
-                                    href="#">{{ user.nickname }} 의 페이지</a></li>
+                                    href="{% url 'mypage' %}">{{ user.nickname }} 의 페이지</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
