--- a/mypage/templates/bookmark.html
+++ b/mypage/templates/bookmark.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block css %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/user.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/bookmark.css' %}" />
 {% endblock css %}
 
 {% block content %}
