--- a/oneday/templates/oneday_main.html
+++ b/oneday/templates/oneday_main.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block css %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/introduce_main.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/oneday_main.css' %}" />
 {% endblock css %}
 
 {% block content %}
