--- a/home/static/css/main.css
+++ b/home/static/css/main.css
@@ -1,14 +1,146 @@
-.main {
-    width: 67%
-}
-
 img {
     width: 100%;
 }
 
-/* 반응형 */ 
-@media (max-width: 900px) {
-    .main {
-        width: 100%;
+.main-container {
+    background-color: #f4f4f4;
+}
+
+.main-content1 {
+    margin-top: 4%;
+    margin-bottom: 4%;
+}
+
+.main-content1-box {
+    padding: 1.5% 7%;
+}
+
+.inner-text1 {
+    font-size: 2vw;
+}
+
+.inner-text2 {
+    font-size: 1.5vw;
+}
+
+.inner-text3 {
+    font-size: 1vw;
+    width: 70%;
+}
+
+.inner-text4 {
+    font-size: 1vw;
+}
+
+.main-content2_wrap {
+    background-color: #ffb75357;
+}
+
+.main-content2 {
+    width: 75%;
+}
+
+.main-content2-box1, .main-content2-box2 {
+    width: 50%;
+}
+
+.main-content2-box1 {
+    padding-left:10%;
+    padding-right:8%;
+}
+
+img.chat-img {
+    width: 80%;
+    margin: 1%;
+}
+
+.main-content3 {
+    margin-top: 4%;
+    margin-bottom: 4%;
+}
+
+.main-content3-box {
+    padding: 1.5% 7%;
+}
+
+img.mainIntro-img {
+    width: 50%;
+    margin: 1%;
+}
+
+/* 반응형 패드 */
+@media (max-width:900px) {
+    .main-content1 {
+        margin-top: 6%;
+        margin-bottom: 3%;
+    }
+
+    .main-content1-box {
+        padding: 1% 6%;
+    }
+    
+    .inner-text1 {
+        font-size: 2.5vw;
+    }
+
+    .inner-text2 {
+        font-size: 2vw;
+    }
+
+    .main-content2 {
+        width: 80%;
+    }
+
+    .main-content2-box1 {
+        padding-left:10%;
+        padding-right:4%;
+    }
+}
+
+/* 반응형 모바일 */
+@media (max-width:500px) {
+    .main-content1 {
+        margin-top: 3%;
+        margin-bottom: 1%;
+    }
+    
+    .main-content1-box {
+        padding: 0;
+    }
+
+    .inner-text1 {
+        font-size: 3.5vw;
+    }
+
+    .inner-text2 {
+        font-size: 2.5vw;
+    }
+
+    .inner-text3 {
+        font-size: 2vw;
+        width: 80%;
+    }
+
+    .main-content2 {
+        width: 98%;
+        padding-top: 4%;
+        padding-bottom: 4%;
+    }
+
+    .main-content2-box1 > p.inner-text1 {
+        font-size: 3.3vw;
+    }
+
+    .main-content2-box1 {
+        padding-left:8%;
+    }
+    
+    img.chat-img {
+        width: 70%;
+        margin: 1%;
+    }
+
+    .inner-text4 {
+        font-size: 1.9vw;
     }
 }
