modify base css

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -34,6 +34,12 @@
                 margin-top: 6vh;
             }
         }
+
+        @media (max-width: 400px) {
+            body {
+                margin-top: 7.3vh;
+            }
+        }
     </style>
 </head>
 
@@ -103,19 +109,19 @@
     <footer class="footer text-center mt-auto">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
-                    <h4><img src="{% static 'img/logo.svg' %}" class="logo_style" alt="..."></h4>
+                <div class="col-lg-4 mb-1">
+                    <img src="{% static 'img/logo.svg' %}" class="footer_logo" alt="...">
                 </div>
                 <!-- copyright -->
                 <div class="col-lg-4">
-                    <h4 class="text-uppercase">Copyright &copy; 모연하다 2023</h4>
+                    <h5 class="text-uppercase">Copyright &copy; 모연하다 2023</h4>
                     <div class = "mt-4">
                         <small>성공회대학교 멋쟁이사자처럼 11기</small><br>
                         <small>주영빈 김시은 김신희 김용욱</small><br>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <h4 class="text-uppercase">Contact</h4>
+                    <h5 class="text-uppercase">Contact</h4>
                     <div class = "mt-4">
                         <small>✉️ moyeonhada@naver.com</small> <br>
                         <small>🌐 깃허브 레포 주소를 달 예정 ~</small> <br>
