--- a/introduce/templates/introduce_main.html
+++ b/introduce/templates/introduce_main.html
@@ -17,10 +17,7 @@
 <div class = "introduce mx-auto">
   <div class = "introduce-side">
     <nav class = "introduce-nav">
-      <a href="{% url 'main' %}" class = "nav-link"> 메인 </a> <hr>
-      <a href="{% url 'main' %}" class = "nav-link"> 메인2 </a> <hr>
-      <a href="{% url 'main' %}" class = "nav-link"> 메인3 </a> <hr>
-      <a href="{% url 'introduce_developer' %}" class = "nav-link"> 개발자소개 </a>
+      <a href="{% url 'introduce_developer' %}" class = "nav-link"> 개발자소개 </a> <hr>
     </nav>
   </div>
   
