--- a/oneday/templates/oneday_read.html
+++ b/oneday/templates/oneday_read.html
@@ -68,7 +68,7 @@
 <p>댓글</p>
 댓글 {{ comment|length }}개
 
-<form action="{% url 'comment_create' oneday.pk %}" method="POST">
+<form action="{% url 'o_comment_create' oneday.pk %}" method="POST">
   {% csrf_token %}
   {{ commentform }}
   <input type="submit" value="댓글등록">
@@ -78,13 +78,13 @@
   {% for comments in comment %}
     <li>{{ comments.user }} - {{ comments.content }}
       {% if request.user == comments.user %}
-      <form action="{% url 'comment_delete' comments.pk %}" method="POST">
+      <form action="{% url 'o_comment_delete' comments.pk %}" method="POST">
         {% csrf_token %}
         <input type="submit" value="삭제">
       </form>
 
       <!-- 수정 버튼 추가 -->
-      <form method="GET" action="{% url 'comment_edit' comments.pk %}">
+      <form method="GET" action="{% url 'o_comment_edit' comments.pk %}">
         <input type="submit" value="수정">
       </form>
 
